# open-netflix-client

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  session.sh  session.txt
app/: browser.py  download.py  main.py  mpris.py  notifications.py  pip.py  settings.py  settings_dialog.py  shortcuts.py  tray.py  updater.py  window.py
app/css/: style.qss
app/utils/: config.py  platform.py  singleton.py  widevine.py
netflix_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
packaging/: netflix-client.desktop  netflix-client.spec
packaging/debian/: control
snap/: snapcraft.yaml
snap/local/: netflix-client-launcher
