[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netflix-client"
version = "1.0.0"
description = "Unofficial Netflix desktop client for Linux with native desktop integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "Netflix Client Contributors"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
]
keywords = ["netflix", "streaming", "qt", "pyside6", "desktop", "linux", "unofficial"]

dependencies = [
    "PySide6>=6.6",
    "keyring>=24.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
mpris = ["dasbus>=1.7"]
all = ["netflix-client[mpris]"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
netflix-client = "app.main:main"
netflix = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"*" = ["*.qss", "*.svg", "*.png"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
